--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
-{
-  "name": "website-analyzer-unit-kerja-401",
-  "version": "1.1.0",
-  "dependencies": {
-    "@google/generative-ai": "^0.21.0"
-  }
+"dependencies": {
+  "@google/generative-ai": "^0.21.0",
+  "next": "latest" 
 }
