--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
-"dependencies": {
-  "@google/generative-ai": "^0.21.0",
-  "next": "latest" 
+{
+  "name": "website-analyzer",
+  "version": "1.1.0",
+  "private": true,
+  "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  }
 }
