--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
+    "@google/generative-ai": "0.21.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
