--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
+  "name": "website-analyzer",
+  "version": "1.2.0",
+  "private": true,
   "dependencies": {
     "@google/generative-ai": "0.21.0",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "next": "14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   }
 }
