--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "website-analyzer",
-  "version": "1.2.0",
-  "private": true,
-  "dependencies": {
-    "@google/generative-ai": "0.21.0",
-    "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
-  },
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18"
   }
 }
