--- a/package.json
+++ b/package.json
@@ -1,15 +1,6 @@
 {
-  "name": "website-analyzer",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "@google/generative-ai": "0.21.0",
+    "next": "latest"
   }
 }
